Reduce Backend Code to simplify